resources/screen-common.less
/* ... */
// Keep images from overflowing
.mw-body-content a > img,
.mw-body-content .floatnone > img {
	height: auto !important;
	max-width: 100% !important;
}

a > img,
.floatnone > img {
	// Hopefully these are only templates or something sane to begin with
	// See: T269970
	.mw-body-content table & {
		height: unset !important;
		max-width: unset !important;
	}
}

#siteSub {
	margin: -0.5em 0 0.5em 0;
	font-style: italic;
	font-family: @fonts-secondary;
	display: none;
}

hr {
	border-width: 1px;
	border-color: @base70;
	border-style: solid none;
	margin: 0.5em 0;
}

pre {
	overflow: auto;
	white-space: pre-wrap;
}

p {
	margin: 0.25em 0;
}

ul,
ol {
	padding: 0;
	margin: 0.3em 0 0.3em 2em;
}

p + ul,
p + ol {
	margin: 0 0 0 2em;
}

/* body */ .mw-hide-empty-elt .mw-parser-output:not( .mw-show-empty-elt ) .mw-empty-elt {
	display: none;
}

.center {
	margin-right: auto;
	margin-left: auto;
	text-align: center;
}

/* Thumbnails */
/* @noflip */
.floatright,
.tright {
	margin: 0 0 0.5em 0.5em;
	padding: 0 0 1em 1.5em;
}

/* @noflip */
.floatleft,
.tleft {
	margin: 0 0.5em 0.5em 0;
	padding: 0 1.5em 1em 0;
}

.thumbinner {
	background: @base90;
	border: 1px solid @base70;
	padding: 0.75em;
	/* Properly center framed thumbnail images (T219717) */
	margin-left: auto;
	margin-right: auto;
	overflow: hidden;
}

.thumbcaption {
	font-size: 95%;
	padding: 0.5em 0 0;
	/* For the magnify link on empty captions */
	min-height: 1em;
}

.thumbinner .thumbimage,
.thumbborder {
	border: solid 1px @base80;
}

.mw-body li.gallerybox div.thumb {
	background: @base90;
	padding: 0;
}

/* Tables of contents */
ul#filetoc,
.toc,
.toccolours,
.mw-warning {
	display: table;
	background: @base90;
	padding: 1.25em 1.5em;
	margin-top: 1em;
	margin-bottom: 1em;
	font-size: 100%;
}

.toc {
	line-height: 1.2;

	ul {
		margin: 1em 0 0;
		list-style: none;
		text-align: left;
	}

	li {
		margin: 0.3em 0;

		&:last-child {
			margin-bottom: 0.5em;
		}
	}
}

ul#filetoc {
	display: block;
	margin-bottom: 2em;
}

.mw-body .toctitle {
	text-align: unset;

	h2 {
		font-family: @fonts-serif;
		font-weight: bold;
		font-size: 1.125em;
		margin: 0;
		display: inline;

		&:after {
			display: none;
		}
	}
}

.toctogglespan {
	float: right;
}

/* Remove brackets around the show/hide button of the TOC
The selectors have a higher specifity than in core */
body :not( :checked ) > .toctogglespan:before,
body :not( :checked ) > .toctogglespan:after {
	content: '';
}

.toctogglelabel {
	padding-left: 0; /* Overwrite label { padding-left: 0.5em; } from forms.less */
	margin-left: 0.5em; /* Create new distance to the TOC title without increasing the focus ring */
}

.toclevel-1 {
	margin-bottom: 0.25em;
}

.tocnumber {
	color: @base20;
}

.skin-gongbi .mw-body .oo-ui-tagMultiselectWidget-handle,
.skin-gongbi .mw-body .oo-ui-capsuleMultiselectWidget-handle {
	margin: 0; /* wat */
}

.mw-body .mw-rcfilters-ui-changesListWrapperWidget .mw-changeslist-legend, /* wat */
.mw-changeslist-legend,
.mw-body .mw-search-profile-tabs,
.mw-body fieldset#mw-searchoptions,
.mw_metadata,
.wikitable,
.mw-datatable {
	color: @text;
	background: @base90;
}

.mw-body .mw-search-profile-tabs {
	padding: 0.5em;
}

.mw_metadata,
.mw-datatable,
.wikitable {
	border-color: @base70;
	background: @base90;
	margin: 1em auto;

	> tr > th,
	> tr > td,
	> * > tr > th,
	> * > tr > td {
		border: 1px solid @base70;
		padding: 0.4em 0.5em;
	}
}

.mw-datatable th {
	background: @blue-bright;
}

.mw_metadata th,
.wikitable th {
	background: @base90;
}

.mw_metadata {
	border-bottom-width: 3px;
}

/* Portlets */
.emptyPortlet,
#mw-page-header-links .emptyPortlet {
	display: none;
}

#p-lang.emptyPortlet {
	display: inherit;
}

/* Hidden stuff */

#p-namespaces h3,
#p-views h3,
#p-more h3,
#p-search h3 {
	.hidden;
}

// Categories on bottom of page
#catlinks-sidebar {
	.nav-block();
}

#catlinks {
	.nav-block();
	padding: 1.25em 2.5em;

	&:before {
		content: '';
		display: block;
		border-top: solid 0.5px @base80;
		padding: 0.5em 0;
	}

	li {
		padding: 0.25em 0.5em;
		border-left: 0;
	}

	div {
		margin: 0 0 0.35em;
	}

	div:last-of-type {
		margin: 0;
	}

	.catlinks-allhidden {
		display: none;
	}
}

// Code for Special:Recentchanges
.mw-rcfilters-ui-filterWrapperWidget-showNewChanges span {
	white-space: break-spaces !important;
	word-break: break-word;
}

.mw-changeslist-legend dt {
	margin: 0 0.5em 0 0;
}

.mw-changeslist-legend dd {
	margin-bottom: 0;
	white-space: break-spaces !important;
	word-break: break-word;
}

.mw-changeslist-line-inner {
	word-break: break-word;
}

